--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,9 +23,9 @@ import BlogPopularComponent from '../components/blogs/BlogPopularComponent.astro
 // }
 ---
 
-<Layout pageTitle="Accoreviews">
-	<BlogPopularComponent category="Tech" dataType={techBlogs} column="3" />
-	<BlogPopularComponent category="Sports" dataType={sportBlogs} column="3" />
-	<BlogPopularComponent category="Fashion" dataType={fashionBlogs} column="2" />
-	<BlogPopularComponent category="Arts" dataType={artBlogs} column="3" />
+<Layout pageTitle="Home - Accoreviews">
+	<BlogPopularComponent category="Tech" dataType={techBlogs} />
+	<BlogPopularComponent category="Sports" dataType={sportBlogs} />
+	<BlogPopularComponent category="Fashion" dataType={fashionBlogs} />
+	<BlogPopularComponent category="Arts" dataType={artBlogs} />
 </Layout>
