--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
 :root {
     --color-secondary-1: #FFD460;
     --color-secondary-2: #F07B3F;
+    --color-secondary-2-dark: #ea6e30;
     --color-text: #333;
 }
 
