--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,23 +1,39 @@
 ---
+import ChakraWrapper from '../ChakraProvider'
+import SideBarDrawer from '../components/SideBarDrawer'
+
+
 const links = [
     {id: 1, text: 'Popular', link: '/'},
-    {id: 2, text: 'All', link: '/all'},
+    {id: 2, text: 'All Blogs', link: '/blog'},
     {id: 3, text: 'About us', link: '/about'},
 ];
 
 ---
 
-<div class="flex justify-between items-center px-10 border-b border-gray-300 py-2.5">
+<div class="flex justify-between items-center px-10 border-b border-gray-300 py-2.5 sticky top-0">
     <!-- SIDE BAR -->
-    Menu icon
+    <div>
+      <ChakraWrapper>
+        <SideBarDrawer client:load/>
+      </ChakraWrapper>
+    </div>
+
     <!-- NAV LINKS -->
-    <ul class="flex gap-10">
+    <ul class="flex gap-10 s:hidden">
         {links.map((link) => (
             <li class="font-thin uppercase text-gray-500 hover:text-[var(--color-secondary-2)]">
               <a href={link.link}>{link.text}</a>
             </li>
           ))}
     </ul>
+
+    <h3 class="hidden s:block text-4xl leading-[20.57px] font-thin text-[var(--color-text)] font-sans">Accoreviews</h3>
+
     <!-- SEARCH -->
-    search icon
+    <div>
+      <i class="fa-solid fa-magnifying-glass text-2xl"></i>
+    </div>
+
+
 </div>
