--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -1,16 +1,22 @@
 ---
-import Icon from "astro-icon";
+const icons = [
+    {iconClass: 'fa-brands fa-facebook-f', link: 'https://www.faceboox.com'},
+    {iconClass: 'fa-brands fa-x-twitter', link: 'https://www.x.com'},
+    {iconClass: 'fa-brands fa-instagram', link: 'https://www.instagram.com'},
+    {iconClass: 'fa-brands fa-pinterest-p', link: 'https://www.pinterest.com'},
+    {iconClass: 'fa-brands fa-youtube', link: 'https://www.youtube.com'},
+    {iconClass: 'fa-solid fa-house', link: '/'},
+]
 ---
 
 
 <!-- ICONS -->
-<div class="px-10">
-    <div class="flex items-center gap-1.5 my-3">
-        <span class="h-6 w-6">a</span>
-        <span class="h-6 w-6">a</span>
-        <span class="h-6 w-6">a</span>
-        <span class="h-6 w-6">a</span>
-        <span class="h-6 w-6">a</span>
-        <span class="h-6 w-6">a</span>
+<div class="px-10 sm:px-0 s:px-0">
+    <div class="flex items-center gap-3 my-3 text-xl text-[var(--color-text)]">
+        {icons.map(icon => (
+            <span class="h-6 w-6 hover:text-[var(--color-secondary-2)] hover:cursor-pointer">
+                <a href={icon.link}><i class={icon.iconClass}></i></a>
+            </span>
+        ))}
     </div>
 </div>
