--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+import { ChakraProvider } from '@chakra-ui/react';
 
 const { pageTitle } = Astro.props
 ---
@@ -12,12 +13,15 @@ const { pageTitle } = Astro.props
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dygn4o3nv/image/upload/c_crop,w_350,h_350/v1738229906/Add_a_heading_hblhik.png" />
+		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
 		<meta name="generator" content={Astro.generator} />
 		<title>{ pageTitle }</title>
 	</head>
 	<body>
-		<Header/>
-		<slot />
-		<Footer/>
+		<ChakraProvider>
+			<Header/>
+			<slot />
+			<Footer/>
+		</ChakraProvider>
 	</body>
 </html>
