--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,29 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import ContactUsBtn from "../components/ContactUsBtn.astro";
+import SocialIcons from "../components/SocialIcons.astro";
 ---
 
 <Layout pageTitle="About Us - Accoreviews">
-    <div>about</div>
+    <div class="grid grid-cols-2 s:grid-cols-1 sm:grid-cols-1 grid-rows-2 gap-x-5 gap-y-10 s:gap-y-2.5 sm:gap-y-1 sm:gap-x-1 py-20 s:py-10 sm:py-14 px-24 s:px-[30px] sm:px-[40px] md:px-[50px] text-[var(--color-text)]">
+        <div class=" sm:h-fit">
+            <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738320292/istockphoto-1995160644-612x612_mmv5wq.webp" alt="Accoreviews 2025." class="h-full w-full object-cover" />
+        </div>
+        <div class="p-4 space-y-5 s:space-y-2.5 sm:h-fit">
+            <h4 class="font-semibold text-4xl s:text-xl sm:text-2xl font-sans text-[var(--color-secondary-2)]">Who We Are</h4>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi animi ratione quae praesentium eveniet. Dicta, et consequatur velit iusto hic unde iure blanditiis at veniam reiciendis ipsam vel porro nesciunt?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
+            <ContactUsBtn/>
+        </div>
+        <div class="p-4 space-y-5 s:space-y-2.5 sm:order-4">
+            <!-- <h4 class="font-semibold text-4xl font-sans">Who We Are</h4> -->
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi animi ratione quae praesentium eveniet. Dicta, et consequatur velit iusto hic unde iure blanditiis at veniam reiciendis ipsam vel porro nesciunt?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quas rerum accusantium perferendis consequatur blanditiis ullam voluptas laborum nulla modi!</p>
+            <SocialIcons/>
+        </div>
+        <div class="sm:order-3">
+            <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738320267/premium_photo-1664202526559-e21e9c0fb46a_ws0prn.avif" alt="Accoreviews 2025." class="h-full w-full object-cover">
+        </div>
+    </div>
 </Layout>
