replaced images and dummy data

--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -2,4 +2,4 @@
 const { tag } = Astro.props
 ---
 
-<div class="rounded-lg px-3 py-1.5 bg-[var(--color-secondary-1)] text-gray-600 text-sm">{tag}</div>
+<div class="rounded-lg px-3 py-1.5 bg-[var(--color-secondary-1)] text-gray-600 text-sm whitespace-nowrap">{tag}</div>
