--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,14 +15,14 @@ import SocialIcons from "../components/SocialIcons.astro";
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
             <ContactUsBtn/>
         </div>
-        <div class="p-4 space-y-5 s:space-y-2.5 sm:order-4">
+        <div class="p-4 space-y-5 s:space-y-2.5 s:order-4 sm:order-4">
             <!-- <h4 class="font-semibold text-4xl font-sans">Who We Are</h4> -->
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi animi ratione quae praesentium eveniet. Dicta, et consequatur velit iusto hic unde iure blanditiis at veniam reiciendis ipsam vel porro nesciunt?</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quas rerum accusantium perferendis consequatur blanditiis ullam voluptas laborum nulla modi!</p>
             <SocialIcons/>
         </div>
-        <div class="sm:order-3">
+        <div class="s:order-3 sm:order-3">
             <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738320267/premium_photo-1664202526559-e21e9c0fb46a_ws0prn.avif" alt="Accoreviews 2025." class="h-full w-full object-cover">
         </div>
     </div>
