--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import BlogCard from "../components/blogs/BlogCard.astro";
-import { allBlogs } from "../demoblogs/all-blogs";
+import Layout from "../../layouts/Layout.astro";
+import BlogCard from "../../components/blogs/BlogCard.astro";
+import { allBlogs } from "../../demoblogs/all-blogs";
 ---
 
 <Layout pageTitle="Blogs - Accoreviews">
