--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -31,7 +31,7 @@ const { blog } = Astro.props;
     <div class="flex flex-col justify-center items-start mt-10 mx-40 md:items-end sm:items-center s:items-center s:mx-10">
       <div class="w-[600px] space-y-5 s:w-[400px] md:w-[500px]">
         <h1 class="font-bold text-black text-3xl">{ blog.title }</h1>
-        <h3 class="font-semibold text-2=xl text-[var(--color-text)]">{blog.content.slice(0,249)}</h3>
+        <h3 class="font-semibold text-2=xl text-[var(--color-text)]">{blog.subTitle}</h3>
       </div>
 
       <!-- TAGS AND SHARE -->
@@ -50,6 +50,8 @@ const { blog } = Astro.props;
 
 
     <div class="flex flex-col justify-center items-center space-y-5">
+
+      <!-- AUTHOR / READING TIME / DATE -->
       <div class="flex justify-between items-center space-x-10 mt-5">
         <!-- AUTHOR -->
         <div class="flex items-center gap-2 text-[var(--color-text)] text-xs border-b border-gray-500 pb-2.5">
@@ -64,13 +66,13 @@ const { blog } = Astro.props;
           <span>{blog.date}</span>
         </div>
       </div>
+
+      <div class="px-20 py-10 text-lg font-thin">
+        <p>{blog.content}</p>
+      </div>
       
-      <!-- BANNER -->
-      <Banner>
-        <p>Visit the store</p>
-        <span><i class="fa-solid fa-store"></i></span>
-      </Banner>
-      <div class="grid grid-cols-3 s:grid-cols-1 sm:grid-cols-1 gap-x-10 s:gap-y-10 sm:gap-y-10 m-10 w-full px-14 s:px-7 sm:px-5 s:mt-3 sm:mt-1.5">
+      <!-- RELATED PRODUCTS -->
+      <div class="grid grid-cols-3 s:grid-cols-1 sm:grid-cols-1 gap-x-10 s:gap-y-10 sm:gap-y-10 m-10 w-full px-14 s:px-7 sm:px-5 s:mt-3 sm:mt-1.5 mb-2.5">
         {blog.subBlogs.map(subBlog => 
           <div>
             <img src={subBlog.img} alt="Image" class="h-[250px] w-full object-cover">
@@ -82,6 +84,11 @@ const { blog } = Astro.props;
           </div>
         )}
       </div>
+      <!-- BANNER -->
+      <Banner>
+        <p>Visit the store</p>
+        <span><i class="fa-solid fa-store"></i></span>
+      </Banner>
     </div>
   </div>
 </Layout>
