--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 <div class="h-20 w-full border-t border-gray-300 py-2.5 flex justify-between items-center px-16 s:px-5 s:text-center sm:px-6">
-    <span class="uppercase font-thin font-sans s:text-xs">
-        &copy; copyright accoreviews 2025. all rights reserved.
+    <span class="font-normal font-sans s:text-xs">
+        &copy;Copyright accoreviews 2025. All rights reserved.
     </span>
     <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738229906/Add_a_heading_hblhik.png" alt="Accoreviews 2025" class="h-11 w-11 rounded-full s:hidden">
 </div>
