--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,12 @@ import Navigation from "./Navigation.astro";
     <div class="s:hidden sm:hidden">
         <SocialIcons/>
     </div>
-    <div class="flex justify-center items center h-40 s:h-10">
-        <h1 class="s:hidden text-8xl leading-[20.57px] flex justify-center items-center font-thin text-[var(--color-text)] font-sans">Accoreviews</h1>
+    <div class="flex justify-center my-0- items-center h-40 s:h-10 s:my-10">
+        <img 
+            src="../../public/accobwn.png" 
+            alt="Accoreviews Logo" 
+            class="max-w-full h-[80px] object-contain"
+        />
     </div>
     <Navigation/>
 </div>
