--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -22,13 +22,13 @@ const links = [
     <!-- NAV LINKS -->
     <ul class="flex gap-10 s:hidden">
         {links.map((link) => (
-            <li class="font-thin uppercase text-gray-500 hover:text-[var(--color-secondary-2)]">
+            <li class="font-normal  text-gray-500 hover:text-[var(--color-secondary-2)]">
               <a href={link.link}>{link.text}</a>
             </li>
           ))}
     </ul>
 
-    <h3 class="hidden s:block text-4xl leading-[20.57px] font-thin text-[var(--color-text)] font-sans">Accoreviews</h3>
+   
 
     <!-- SEARCH -->
     <div>
