--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,32 +1,40 @@
 ---
-import '../styles/global.css'
-import Header from '../components/Header.astro'
-import Footer from '../components/Footer.astro'
-import { ChakraProvider } from '@chakra-ui/react';
+import "../styles/global.css";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import { ChakraProvider } from "@chakra-ui/react";
 
-const { pageTitle } = Astro.props
+const { pageTitle } = Astro.props;
 
-
-const path = Astro.url.pathname
+const path = Astro.url.pathname;
 
 console.log(path);
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dygn4o3nv/image/upload/c_crop,w_350,h_350/v1738229906/Add_a_heading_hblhik.png" />
-		<link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-		<meta name="generator" content={Astro.generator} />
-		<title>{ pageTitle }</title>
-	</head>
-	<body>
-		<ChakraProvider>
-			<Header/>
-			<slot />
-			<Footer/>
-		</ChakraProvider>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://res.cloudinary.com/dygn4o3nv/image/upload/c_crop,w_350,h_350/v1738229906/Add_a_heading_hblhik.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
+    <ChakraProvider>
+      <Header />
+      <slot />
+      <Footer />
+    </ChakraProvider>
+  </body>
 </html>
