--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import BlogPopularComponent from '../components/blogs/BlogPopularComponent.astro';
-
-// interface Post {
-//   id: number;
-//   title: string;
-//   body: string;
-// }
-
-// let posts: Post[] = [];
-
-// try {
-//   const response = await fetch('https://jsonplaceholder.typicode.com/posts?_limit=5');
-//   posts = await response.json();
-// } catch (error) {
-//   console.error('Failed to fetch posts:', error);
-// }
 ---
 
 <Layout pageTitle="Home - Accoreviews">
-	<BlogPopularComponent dataCategory="Tech"  />
-	<BlogPopularComponent dataCategory="Sports"  />
-	<BlogPopularComponent dataCategory="Fashion"  />
-	<BlogPopularComponent dataCategory="Arts"  />
+    <BlogPopularComponent dataCategory="Current deals" />
 </Layout>
