--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,5 +2,9 @@
     <span class="font-normal font-sans s:text-xs">
         &copy;Copyright accoreviews 2025. All rights reserved.
     </span>
-    <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738229906/Add_a_heading_hblhik.png" alt="Accoreviews 2025" class="h-11 w-11 rounded-full s:hidden">
+        <img 
+        src="../../public/accobwn.png" 
+        alt="Accoreviews Logo" 
+        class="h-11 w-auto s:hidden"
+    />
 </div>
