--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,11 +8,12 @@ import Navigation from "./Navigation.astro";
         <SocialIcons/>
     </div>
     <div class="flex justify-center my-0- items-center h-40 s:h-10 s:my-10">
-        <img 
+        <a href="/">
+            <img 
             src="../../public/accobwn.png" 
             alt="Accoreviews Logo" 
             class="max-w-full h-[80px] object-contain"
-        />
+        /> </a>
     </div>
     <Navigation/>
 </div>
