--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -1,8 +1,8 @@
 ---
 const icons = [
-    {iconClass: 'fa-brands fa-facebook-f', link: 'https://www.faceboox.com'},
+    {iconClass: 'fa-brands fa-facebook-f', link: 'https://web.facebook.com/acco.shopss/'},
     {iconClass: 'fa-brands fa-x-twitter', link: 'https://www.x.com'},
-    {iconClass: 'fa-brands fa-instagram', link: 'https://www.instagram.com'},
+    {iconClass: 'fa-brands fa-instagram', link: 'https://www.instagram.com/acco.shopss?igsh=a29ha3o3bTR3NnNx&utm_source=qr'},
     {iconClass: 'fa-brands fa-pinterest-p', link: 'https://www.pinterest.com'},
     {iconClass: 'fa-brands fa-youtube', link: 'https://www.youtube.com'},
     {iconClass: 'fa-solid fa-house', link: '/'},
