--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,6 +21,7 @@ console.log(path);
       type="image/x-icon"
       href="https://res.cloudinary.com/dygn4o3nv/image/upload/c_crop,w_350,h_350/v1738229906/Add_a_heading_hblhik.png"
     />
+    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
