--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,25 +5,25 @@ import SocialIcons from "../components/SocialIcons.astro";
 ---
 
 <Layout pageTitle="About Us - Accoreviews">
-    <div class="grid grid-cols-2 s:grid-cols-1 sm:grid-cols-1 grid-rows-2 gap-x-5 gap-y-10 s:gap-y-2.5 sm:gap-y-1 sm:gap-x-1 py-20 s:py-10 sm:py-14 px-24 s:px-[30px] sm:px-[40px] md:px-[50px] text-[var(--color-text)]">
+    <div class="grid font-sans grid-cols-2 s:grid-cols-1 sm:grid-cols-1 grid-rows-2 gap-x-5 gap-y-10 s:gap-y-2.5 sm:gap-y-1 sm:gap-x-1 py-20 s:py-10 sm:py-14 px-24 s:px-[30px] sm:px-[40px] md:px-[50px] text-[var(--color-text)]">
         <div class=" sm:h-fit">
-            <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738320292/istockphoto-1995160644-612x612_mmv5wq.webp" alt="Accoreviews 2025." class="h-full w-full object-cover" />
+            <img src="https://res.cloudinary.com/dumilooyu/image/upload/v1741345736/cv4mptugj4yjzbtlra5x.jpg" alt="Accoreviews 2025." class="h-full w-full object-cover rounded-md" />
         </div>
         <div class="p-4 space-y-5 s:space-y-2.5 sm:h-fit">
             <h4 class="font-semibold text-4xl s:text-xl sm:text-2xl font-sans text-[var(--color-secondary-2)]">Who We Are</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi animi ratione quae praesentium eveniet. Dicta, et consequatur velit iusto hic unde iure blanditiis at veniam reiciendis ipsam vel porro nesciunt?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
+            <p>At Acco Shops, we’re passionate about finding the best deals so you don’t have to! We bring you top-rated tech, office, and home gadgets, along with unexpected finds that make life easier—all at the best prices.</p>
+            <p>Our goal is simple: help you save money while discovering products you’ll love. Whether it’s a must-have gadget or a budget-friendly essential, we curate the best Amazon deals so you can shop smarter.</p>
             <ContactUsBtn/>
         </div>
         <div class="p-4 space-y-5 s:space-y-2.5 s:order-4 sm:order-4">
             <!-- <h4 class="font-semibold text-4xl font-sans">Who We Are</h4> -->
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi animi ratione quae praesentium eveniet. Dicta, et consequatur velit iusto hic unde iure blanditiis at veniam reiciendis ipsam vel porro nesciunt?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum corrupti ad natus fugit. Sint vitae nesciunt ullam minus corrupti illo doloremque exercitationem aliquam quia, qui harum quasi provident aperiam distinctio odit perferendis laboriosam ratione excepturi maiores vero sunt aspernatur veritatis!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, quas rerum accusantium perferendis consequatur blanditiis ullam voluptas laborum nulla modi!</p>
+            <p>We bring you handpicked deals that offer real value, affordable finds to fit every lifestyle, and a seamless shopping experience with direct Amazon links. J</p>
+            <p>We focus on bringing you affordable finds that fit every lifestyle, from must-have tech to home and office essentials.</p>
+            <p>Shopping with us is seamless and hassle-free, thanks to our direct Amazon links, making it easier than ever to discover and purchase top-rated products. Join our growing community of smart shoppers and start saving today! </p>
             <SocialIcons/>
         </div>
         <div class="s:order-3 sm:order-3">
-            <img src="https://res.cloudinary.com/dygn4o3nv/image/upload/v1738320267/premium_photo-1664202526559-e21e9c0fb46a_ws0prn.avif" alt="Accoreviews 2025." class="h-full w-full object-cover">
+            <img src="https://res.cloudinary.com/dumilooyu/image/upload/v1741345621/luxaxzetzeozbygjtpar.jpg" alt="Accoreviews 2025." class="h-full w-full object-cover rounded-md">
         </div>
     </div>
 </Layout>
