add absoulte url

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import Navigation from "./Navigation.astro";
     <div class="flex justify-center my-0- items-center h-40 s:h-10 s:my-10">
         <a href="/">
             <img 
-            src="../../public/accobwn.png" 
+            src="https://res.cloudinary.com/dumilooyu/image/upload/v1741352918/vvkmuowqgc3ditnq2k54.png"
             alt="Accoreviews Logo" 
             class="max-w-full h-[80px] object-contain"
         /> </a>
