add absoulte url

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
         &copy;Copyright accoreviews 2025. All rights reserved.
     </span>
         <img 
-        src="../../public/accobwn.png" 
+        src="https://res.cloudinary.com/dumilooyu/image/upload/v1741352918/vvkmuowqgc3ditnq2k54.png"
         alt="Accoreviews Logo" 
         class="h-11 w-auto s:hidden"
     />
