--- a/.vercel/output/functions/_render.func/src/pages/blog/[slug].astro
+++ b/.vercel/output/functions/_render.func/src/pages/blog/[slug].astro
@@ -83,7 +83,7 @@ try {
                 <img
                   src={subBlog.img?.asset.url || '/placeholder.jpg'}
                   alt={subBlog.title}
-                  class="w-full max-h-[500px] object-cover rounded-md"
+                  class="w-full h-full object-cover rounded-md"
                 />
               </div>
               <p class="text-gray-800">{subBlog.description || 'No description'}</p>
