--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,8 @@ console.log(path);
       type="image/x-icon"
       href="https://res.cloudinary.com/dygn4o3nv/image/upload/c_crop,w_350,h_350/v1738229906/Add_a_heading_hblhik.png"
     />
-    <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha384-xxzFf8rFZqkz3b39z3jHjvRTF3pHqBBl8z7P94s8YdU/ZFp9MO7fD/aPOylG8Xau" crossorigin="anonymous">
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
