--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import BlogPopularComponent from '../components/blogs/BlogPopularComponent.astro';
+import PrimeMembership from '../components/PrimeMembership.astro';
 ---
 
 <Layout pageTitle="Home - Accoreviews">
-    <BlogPopularComponent dataCategory="Current deals" />
+    <BlogPopularComponent dataCategory="Recent" />
+    <PrimeMembership />
 </Layout>
