--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -87,7 +87,7 @@ try {
                   class="w-full h-full object-cover rounded-md"
                 />
               </div>
-              <p class="text-gray-800">{subBlog.description || 'No description'}</p>
+              <p class="text-gray-800 text-base">{subBlog.description || 'No description'}</p>
               <p class="text-gray-800"><b>Price:</b> {subBlog.price || 'N/A'}</p>
               <p>
                 <a
